fix java 11 compilation
git-svn-id: https://svn.code.sf.net/p/jackcess/code/jackcess/branches/jdk11@1443 f203690c-595d-4dc9-a70b-905162fa7fd2